# clouvel

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLOUVEL_ACTION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  ruff.toml  setup.bat  setup.sh
.claude/: hooks.json  settings.json
.claude/files/: created.md
.claude/planning/: findings.md  progress.md  reddit-posts.md  task_plan.md
.claude/status/: current.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  pages.yml  release.yml  scheduled-release.yml
docs/: Clouvel-PRD-v2.0.md  Command_Reference.md  HOOKS.md  Karpathy_Practical_Guide.md  LemonSqueezy_Setup.md  PLAN_v0.2.0_Implementation.md  PRD.md  ROADMAP_5Y.md  Verification_Protocol.md  Vibe_Coding_Tips.md  roadmap-meeting.md
docs/architecture/: ENTRYPOINTS.md  MODULE_MAP.md  RUNTIME_PATHS.md  SIDE_EFFECTS.md  SMOKE_LOGS.md  data_contracts.md  decision_log_manager.md  flow_manager.md
docs/architecture/CALL_FLOWS/: flow_activate.md  flow_index.md  flow_manager.md  flow_webhook.md
docs/architecture/DECISION_LOG/: ADR-0001-manager-execution.md
docs/faq/: clouvel-faq.html
docs/landing/: LAYOUT_OPTIONS.md  MAINTENANCE.md  _headers  activate.html  docs-en.html  docs.html  docs.js  i18n.js  index-en.html  index-ko.html  index.html  index.js  layouts.js  styles.css  terms.html  theme-switcher.js
docs/landing/i18n/: en.json  ko.json
docs/landing/themes/: README.md  creative.css  default.css  developer.css  friendly.css  minimal.css  premium.css
docs/marketing/: product-hunt-checklist.md  proofreading-brief.md  reddit-posts-ph-launch.md  sns-posts.md  thumbnail.html
docs/marketing/mockups/: can_code_block.html  can_code_pass.html  manager_feedback.html  ph_hero.html  ph_problem_solution.html  ph_regression_memory.html  ph_ship_evidence.html
docs/mcp/: MCP_CATALOG.md  MCP_GROUPS.md  MCP_STANDARDIZATION_PLAN.md
docs/roadmap/: 01_vision.md  02_market.md  03_2026.md  04_2027-28.md  05_2029-30.md  06_finance.md  07_risk.md  08_exit.md  09_mcp_platforms.md  README.md
docs/templates/: README.md  api.md  chrome-ext.md  cli.md  discord-bot.md  generic.md  landing-page.md  saas.md  web-app.md
infra/api/: worker.js  wrangler.toml
scripts/: docs_check.py  docs_extract.py
src/: main.py
src/api/: __init__.py  docs.py  guide.py
src/clouvel/: __init__.py  analytics.py  api_client.py  cli.py  content_api.py  exceptions.py  gate_check.py  license.py  license_common.py  license_free.py  logging_config.py  main.py  pro_downloader.py  registry.py  server.py  tool_dispatch.py  tool_schemas.py  ui.py  version_check.py
src/clouvel/db/: __init__.py  errors.py  (+6 more)
src/models/: __init__.py  docs.py  guide.py
src/services/: __init__.py  docs_service.py  guide_service.py
tests/: conftest.py  test_agents.py  test_analytics.py  test_api_client.py  test_architecture.py  test_call_tool.py  test_checkpoint.py  test_context.py  test_core.py  test_db_errors.py  test_db_migrate.py  test_db_regression.py  test_db_rules.py  test_db_schema.py  test_db_vectors.py  test_docs.py  test_entitlements.py  test_errors.py  test_free_limits.py  test_free_user_e2e.py  test_gate_service.py  test_hooks.py  test_knowledge.py  test_knowledge_global.py  test_manager_core.py  test_manager_examples.py  test_manager_formatter.py  test_manager_personas.py  test_manager_templates.py  test_manager_utils.py  test_meeting_collector.py  test_planning.py  test_planning_detailed.py  test_prd_scoring.py  test_proactive.py  test_quota_service.py  test_record_file.py  test_registry.py  test_roles.py  test_rules_tools.py  (+10 more)
(+85 files in other folders)
