[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clouvel"
version = "1.3.13"
description = "바이브코딩 프로세스를 강제하는 MCP 서버 - PRD 없으면 코딩 없다"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SINABRO" }
]
keywords = ["mcp", "vibe-coding", "prd", "documentation", "shovel", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
# 벡터 검색 기능 (Error System v2.0)
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
# 전체 기능
full = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
clouvel = "clouvel:main"

[project.urls]
Homepage = "https://github.com/Whitening-Sinabro/clouvel"
Repository = "https://github.com/Whitening-Sinabro/clouvel"
Issues = "https://github.com/Whitening-Sinabro/clouvel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clouvel"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src/clouvel"]

[tool.hatch.build]
artifacts = ["src/clouvel/templates/**/*.md"]
exclude = [
    "src/clouvel/license.py",
    "src/clouvel/tools/ship_pro.py",
    "src/clouvel/tools/manager/",
]
