[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clouvel"
version = "5.2.0"
description = "MCP server that remembers AI mistakes and prevents regressions - AI makes it fast, Clouvel makes it right"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SINABRO" }
]
keywords = ["mcp", "vibe-coding", "prd", "regression-memory", "error-prevention", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
# 터미널 UI (예쁜 출력)
ui = [
    "rich>=13.0.0",
]
# Knowledge Base 암호화 (선택)
encryption = [
    "cryptography>=41.0.0",
]
# Anthropic API (Manager Pro)
anthropic = [
    "anthropic>=0.18.0",
]
# 동적 회의 생성 (Pro)
dynamic = [
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]
# 벡터 검색 기능 (Error System v2.0)
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
# 전체 기능
full = [
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "cryptography>=41.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
clouvel = "clouvel:main"
clouvel-gate = "clouvel.gate_check:main"

[project.urls]
Homepage = "https://github.com/Whitening-Sinabro/clouvel"
Repository = "https://github.com/Whitening-Sinabro/clouvel"
Issues = "https://github.com/Whitening-Sinabro/clouvel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clouvel"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src/clouvel"]

[tool.hatch.build]
artifacts = ["src/clouvel/templates/**/*.md"]
exclude = [
    "src/clouvel/license.py",
    "src/clouvel/tools/ship_pro.py",
    "src/clouvel/tools/manager/",
]
